fix navigator buttons align issue of safari

--- a/@antv/gatsby-theme-antv/site/components/NavigatorBanner.module.less
+++ b/@antv/gatsby-theme-antv/site/components/NavigatorBanner.module.less
@@ -6,6 +6,7 @@
   cursor: pointer;
   border-top: 1px solid #e8e8e8;
   line-height: 1.5;
+  vertical-align: top;
 
   &.hidden {
     height: 86px;
